# rmk

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
common/config/: Cargo.toml
common/config/src/: lib.rs
common/hid-key/: Cargo.toml
common/hid-key/src/: lib.rs
firmware/: Cargo.toml  atmega32u4.json  build.rs  keyboard.toml
firmware/.cargo/: config.toml
firmware/keyboard/storyboard68/: Cargo.toml  build.rs  xtask.toml
firmware/keyboard/storyboard68/hardware/: jlcpcb-keyboard-bom.csv  jlcpcb-keyboard-bottom-cpl.csv
firmware/keyboard/storyboard68/src/: main.rs
firmware/lib/create-rmk-build/: Cargo.toml
firmware/lib/create-rmk-build/src/: lib.rs
firmware/lib/driver/: Cargo.toml
firmware/src/: config.rs  context.rs  key.rs  macros.rs  main.rs
hardware/: README.md  storyboard68-layout.json
keyboard/: Cargo.toml
keyboard/storyboard68/: Cargo.toml  README.md  xtask.toml
keyboard/storyboard68/hardware/: README.md
keyboard/storyboard68/src/: context.rs
lib/create-rmk/: Cargo.toml
lib/create-rmk-build/src/: lib.rs
lib/driver/: Cargo.toml
lib/driver/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: config.rs  keyboard.rs  main.rs  template.rs
