[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
cargo_metadata = "0.18.1"
toml = { version = "0.8.19", features = ["parse"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.89"
tracing = "0.1"
tracing-subscriber = "0.3.18"
camino = "1.1.9"
handlebars = "6.1.0"
subprocess = "0.2.9"
