[package]
name = "keyboard-driver"
description = "keyboard driver"
version = "0.1.0"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
usb-keyboard-config = { workspace = true }

usb-device = "0.3.2"
usbd-hid = "0.8.2"
# temp fix for usbd-hid
ssmarshal = { version = "1", features = [] }
